day-4-module/module/vpc/main.tf
resource "aws_vpc" "my_vpc" {
    cidr_block = var.vpc_cidr
    tags = {
        Name = "my_vpc"
    }
}

resource "aws_subnet" "public_subnet" {
    vpc_id     = aws_vpc.my_vpc.id
    cidr_block = var.public_subnet_cidr
    availability_zone = "us-west-2a"
    map_public_ip_on_launch = true 
    tags = {
        Name = "public_subnet"
    }
}

resource "aws_subnet" "private_subnet" {
    cidr_block = var.private_subnet_cidr
    availability_zone = var.private_az
    vpc_id = aws_vpc.my_vpc.id 
    tags = {
        Name = "private_subnet"
    }
}

resource "aws_internet_gateway" "IGW" {
    vpc_id = aws_vpc.my_vpc.id
    tags = {
        Name = "IGW"
    }
}

resource "aws_eip" "nat_eip" {
    domain = "vpc" 
    tags = {
        Name = "nat_eip"
    }
}

resource "aws_nat_gateway" "nat" {
    subnet_id = aws_subnet.public_subnet.id 
    allocation_id = aws_eip.nat_eip.id
    tags = {
        Name = "nat"
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws.vpc.my_vpc.id 
    route {
        gateway_id = aws_internet_gateway.IGW.id 
        cidr_block = "0.0.0.0/0"
    }
}

resource "aws_route_table_association" "public_rt_assoc"{
    subnet_id = aws_subnet.public_subnet.id 
    route_table_id = aws_route_table_public_rt.id 
}

resource "aws_route_table" "private_rt" {
    vpc_id = aws_vpc.my_vpc.id 
    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.ant.id 
    }
}

resource "aws_route_table_association" "private_rt_assoc" {
    subnet_id = aws_subnet.private_subnet.id 
    route_table_id = aws_route_table.private_rt.id 
}

resource "aws_security_group" "sg" {
    name = var.sg_name 
    description = var.sg_name 
    vpc_id = aws_vpc.my_vpc.id 


    ingress {
        from_port = var.ssh_port
        to_port = var.ssh_port
        protocol = "tcp"
        cidr_blocks = [0.0.0.0/0]
    }

    ingress {
        from_port = var.http_port 
        to_port = var.http_port
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
        Name = "my_sg"
    }

    
}
